--- a/frontend/src/profile/profile.css
+++ b/frontend/src/profile/profile.css
@@ -7,11 +7,12 @@
     
 }
 
-.edit-profile {
-    background-color: rgb(222, 235, 240);
+.update-button {
+    background-color: rgb(205, 232, 241);
 }
 
 .form {
     width : 100
 }
+
 
